updating config.properties for DB

--- a/setup/config.properties
+++ b/setup/config.properties
@@ -4,3 +4,8 @@ mq-port=61616
 mq-user=guest
 mq-pass=guest
 mq-destination=ext.gps.event.tc
+db-host=localhost
+db-port=3306
+db-user=traccarserver
+db-pass=traccarpass
+db-name=traccar
