adding external code

--- a/setup/config.properties
+++ b/setup/config.properties
@@ -1,5 +1,5 @@
-mq-host=localhost
-mq-port=61616
+mq-host=120.63.189.207
+mq-port=5656
 mq-user=guest
 mq-pass=guest
 mq-destination=ext.gps.event.tc
@@ -8,3 +8,4 @@ db-port=3306
 db-user=traccarserver
 db-pass=traccarpass
 db-name=traccar
+target-ws-url=http://103.231.40.50:5175
