updating code for timezone

--- a/setup/config.properties
+++ b/setup/config.properties
@@ -9,3 +9,4 @@ db-user=traccarserver
 db-pass=traccarpass
 db-name=traccar
 target-ws-url=http://103.231.40.50:5175
+gmt-imei=864180036437825,868683021584960,351608085310261
